--- a/assets/sass/painel.scss
+++ b/assets/sass/painel.scss
@@ -27,6 +27,47 @@ a{
         object-position: center;
     }
 }
+.loading {
+    position: fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:rgba(0,0,0,.8);
+    z-index:1000;
+    .loading-content {
+        padding:20px;
+        background-color:#fff;
+        border-radius:10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .loading-text {
+            font-size: 12px;
+            line-height: 15px;
+            margin-bottom: 20px;
+        }
+        .loading-effect {
+            width: 50px;
+            height: 50px;
+            background-color:transparent;
+            border-radius: 50%;
+            border: 10px solid #12fff7;
+            border-top: 10px solid #000;
+            animation: loading 2s infinite linear;
+
+        }
+    }
+}
+@keyframes loading {
+    to{
+        transform: rotate(360deg);
+    }
+}
 .uploading{
     display: none;
     position: fixed;
