Adicao de valor para dependentes

--- a/assets/sass/north.scss
+++ b/assets/sass/north.scss
@@ -715,6 +715,9 @@ strong {
     font-size: 14px;
     font-weight: normal;
 }
+.typeRegister {
+    margin-bottom: 40px;
+}
 .parceiros_redes {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
