--- a/assets/sass/painel.scss
+++ b/assets/sass/painel.scss
@@ -1,20 +1,19 @@
-$cor_verde: rgb(15,142,116);
+$cor_verde: rgb(15, 142, 116);
 $cor_vermelha: #b21313;
 $cor_preta: #000;
-$cor_cinza: rgb(183,182,182);
+$cor_cinza: rgb(183, 182, 182);
 .tudo {
-    background-color:$cor_cinza;
+    background-color: $cor_cinza;
     min-height: 100vh;
-    
 }
 .formLogin {
-    background-color:#fff;
-    padding:25px 40px !important;
-    border-radius:5px;
+    background-color: #fff;
+    padding: 25px 40px !important;
+    border-radius: 5px;
 }
-a{
-    color:$cor_verde;
-    &:hover{
+a {
+    color: $cor_verde;
+    &:hover {
     }
 }
 .areaImageDoc {
@@ -29,19 +28,19 @@ a{
 }
 .loading {
     position: fixed;
-    top:0;
-    left:0;
-    bottom:0;
+    top: 0;
+    left: 0;
+    bottom: 0;
     right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:rgba(0,0,0,.8);
-    z-index:1000;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
     .loading-content {
-        padding:20px;
-        background-color:#fff;
-        border-radius:10px;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -54,48 +53,46 @@ a{
         .loading-effect {
             width: 50px;
             height: 50px;
-            background-color:transparent;
+            background-color: transparent;
             border-radius: 50%;
             border: 10px solid #12fff7;
             border-top: 10px solid #000;
             animation: loading 2s infinite linear;
-
         }
     }
 }
 @keyframes loading {
-    to{
+    to {
         transform: rotate(360deg);
     }
 }
-.uploading{
+.uploading {
     display: none;
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     right: 0;
-    bottom:0;
+    bottom: 0;
     z-index: 10000;
-    background-color:rgba(0,0,0,.8);
+    background-color: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
-    .uploadingContent{
-        padding:20px;
-        border-radius:10px;
-        background-color:#fff;
+    .uploadingContent {
+        padding: 20px;
+        border-radius: 10px;
+        background-color: #fff;
         font-size: 20px;
     }
-
 }
 
-.menuVertical{
+.menuVertical {
     line-height: 22px;
 
-    ul{
-        li{
+    ul {
+        li {
             float: none;
-            
-            a{
+
+            a {
                 display: block;
                 padding: 12px 15px;
                 display: flex;
@@ -103,7 +100,7 @@ a{
                 justify-content: flex-start;
                 width: 100%;
                 max-width: 100%;
-                i{
+                i {
                     line-height: 21px !important;
                     height: auto !important;
                 }
@@ -111,48 +108,98 @@ a{
         }
     }
 }
-.carregando{
+.carregando {
     position: fixed;
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     z-index: 10000000;
-    background-color:rgba(0,0,0,0.8);
-    display:flex;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
     justify-content: center;
     align-items: center;
-    display:none;
-    .carregando--conteudo{
-        padding:30px;
-        border-radius:5px;
-        background-color:#fff;
-        .texto{
-            font-size:20px;
+    display: none;
+    .carregando--conteudo {
+        padding: 30px;
+        border-radius: 5px;
+        background-color: #fff;
+        .texto {
+            font-size: 20px;
             font-weight: bold;
-            margin-bottom:15px;
+            margin-bottom: 15px;
         }
-        .efeito{
+        .efeito {
             width: 100%;
             height: 15px;
             position: relative;
-            .barra{
+            .barra {
                 height: 100%;
                 width: 15px;
-                border-radius:8px;
-                background-color:$cor_preta;
+                border-radius: 8px;
+                background-color: $cor_preta;
                 animation-name: carrega;
                 animation-duration: 1s;
                 animation-iteration-count: infinite;
             }
         }
     }
-
 }
-@keyframes carrega{
-    0% {margin-left:0}
-    50% {margin-left: 90%}
-    100% {margin-left:0}
+@keyframes carrega {
+    0% {
+        margin-left: 0;
+    }
+    50% {
+        margin-left: 90%;
+    }
+    100% {
+        margin-left: 0;
+    }
 }
+@media print {
+    .menuLateral {
+        display: none;
+    }
+    .menuVertical {
+        display: none;
+    }
+    * {
+        background: transparent !important;
+        color: #000 !important;
+        text-shadow: none !important;
+        filter: none !important;
+        --ms-filter: none !important;
+    }
 
-
+    body {
+        margin: 0;
+        padding: 0;
+        line-height: 1.4em;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    h5 {
+        font-size: 16pt;
+        font-weight: bold;
+    }
+    table {
+        margin: 20pt 0;
+        th {
+            font-weight: bold;
+        }
+        td,th {
+            padding: 4pt;
+            margin: 0;
+        }
+        td {
+            font-size: 10pt;
+        }
+        tr {
+            border-bottom: 1pt solid #000;
+        }
+    }
+    input,select,textarea {
+        width: 100%;
+        margin-bottom: 5pt;
+        border:none;
+    }
+}
