--- a/assets/sass/north.scss
+++ b/assets/sass/north.scss
@@ -1038,6 +1038,12 @@ em {
     }
 }
 @media (max-width: 480px) {
+    .img--logo{
+        margin: 15px 0;
+        img {
+            width: 180px;
+        }
+    } 
     .bt_dependentes .area-dependentes .bt-remove {
         position: relative;
         width: 100%;
