--- a/assets/sass/north.scss
+++ b/assets/sass/north.scss
@@ -167,7 +167,6 @@ strong {
 .register--title {
     h2 {
         margin-bottom: 20px;
-        text-align: center;
         font-weight: bold;
         color: $primary;
         text-transform: uppercase;
@@ -438,16 +437,19 @@ strong {
 .search-corretor {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    margin-bottom: 20px;
+    .checkBoxChoose {
+        margin-top: 15px;
+    }
     .input-corretor {
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
         }
         input {
             padding: 10px;
@@ -457,6 +459,11 @@ strong {
         .inputs {
             display: flex;
             margin-bottom: 5px;
+            input {
+                width: 120px;
+                font-size: 18px;
+                font-family: inherit;
+            }
         }
         button {
             border: none;
