--- a/assets/sass/north.scss
+++ b/assets/sass/north.scss
@@ -314,11 +314,16 @@ strong {
     }
 }
 .corretor--result--area {
-    padding: 20px;
+    padding: 20px 40px;
     background-color: $primary;
     color: #fff;
     text-align: center;
     margin: 20px 0;
+    border-radius: 14px;
+    p{
+        margin-bottom:0;
+        margin-top:0;
+    }
 }
 .footer {
     background-color: $primary;
