--- a/assets/sass/geral.scss
+++ b/assets/sass/geral.scss
@@ -1,4 +1,5 @@
-@import 'reset';
+@import 'modules/reset';
+@import 'modules/dev';
 /*Geral*/
 $cor_verde: rgb(15,142,116);
 $cor_vermelha: #b21313;
