--- a/assets/sass/north.scss
+++ b/assets/sass/north.scss
@@ -1,4 +1,5 @@
-@import "reset";
+@import "modules/reset";
+@import 'modules/dev';
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap");
 
 $font: "Inter", sans-serif;
