--- a/assets/sass/painel.scss
+++ b/assets/sass/painel.scss
@@ -4,8 +4,25 @@ $cor_vermelha: #b21313;
 $cor_preta: #000;
 $cor_cinza: rgb(183, 182, 182);
 .tudo {
-    background-color: $cor_cinza;
+    background-color: #fff;
     min-height: 100vh;
+    display: flex;
+    .areaImage {
+        flex:1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #f6f6f6;
+    }
+    .formArea {
+        flex:1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #010165;
+        margin-bottom: 0;
+    }
+
 }
 .formLogin {
     background-color: #fff;
