--- a/assets/sass/modules/_reset.scss
+++ b/assets/sass/modules/_reset.scss
@@ -100,3 +100,4 @@ q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 a{ text-decoration: none; outline:none; color: #05a3db;}
 input, textarea, select{ outline:none;}
+textarea{resize: none;}
